--- a/src/Components/Avalanch.css
+++ b/src/Components/Avalanch.css
@@ -22,7 +22,6 @@ body {
 }
 
 .swiper-slide {
-
   font-size: 18px;
   background: #fff;
 
@@ -46,4 +45,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.header-nft {
+  margin-left: 60px;
 }
