--- a/src/Components/Slider1.css
+++ b/src/Components/Slider1.css
@@ -46,9 +46,9 @@ body {
   height: 100%;
   object-fit: cover;
 }
-.swiper-pagination {
+/* .swiper-pagination {
   background-color: #ababab !important;
-}
+} */
 
 /* .video {
   margin-top: -72px px;
@@ -130,7 +130,7 @@ body {
 }
 
 .swiper-button-next:after {
-  background-color: rgb(203, 197, 197);
+  /* background-color: rgb(203, 197, 197); */
   color: #000;
   padding: 20px;
   font-size: 20px !important;
@@ -138,10 +138,22 @@ body {
   font-weight: bolder !important;
 }
 .swiper-button-prev:after {
-  background-color: rgb(203, 197, 197);
+  /* background-color: rgb(203, 197, 197); */
   color: #000;
   padding: 20px;
   font-size: 20px !important;
   border-radius: 100%;
   font-weight: bolder !important;
+}
+span.swiper-pagination-bullet {
+  display: flex;
+  width: 5% !important;
+  border-radius: 5px !important;
+}
+.swiper-pagination-bullet {
+  background: rgb(197, 194, 194);
+}
+.swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
+  display: flex !important;
+  margin-left: 700px !important;
 }
