--- a/src/Components/Trending.css
+++ b/src/Components/Trending.css
@@ -49,7 +49,9 @@
   color: #707a83 !important;
 }
 .nav-tabs .nav-link {
-  border-bottom: 5px solid #000 !important;
+  border-bottom: 2px solid rgb(255, 251, 251) !important;
+  color: #fff !important;
+  padding-top: 12px !important;
 }
 .colllect {
   width: 60%;
@@ -136,4 +138,11 @@
   color: #000 !important;
   font-weight: 700 !important;
   border-bottom: 1px solid rgb(196, 189, 189) !important;
+}
+.mb-3.uncontrolled {
+  width: 94%;
+  margin-left: 46px;
+}
+.nav-tabs .nav-link.active {
+  font-size: 35px !important;
 }
