--- a/src/Components/Notable.css
+++ b/src/Components/Notable.css
@@ -49,14 +49,18 @@ body {
 .card-body12 {
   margin-top: -26px !important;
 }
-
+.card-body {
+  background: grey;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
 .card-image1 {
   width: 78px !important;
   height: 78px;
   border: 4px solid rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: rgb(0 0 0 / 8%) 0px 5px 10px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(99, 95, 95);
   object-fit: cover;
 }
 .text32 {
@@ -64,6 +68,12 @@ body {
   font-size: 16px;
   padding-left: 16px;
 }
+.tick {
+  color: #eee;
+}
+/* .tick-icons {
+  color: rgb(0, 145, 255);
+} */
 /* .header-new {
   margin-left: 60px;
 } */
