--- a/src/Components/Browse.css
+++ b/src/Components/Browse.css
@@ -8,7 +8,22 @@
 /* .header-browse {
   margin-left: 60px;
 } */
-.cards {
+.cards1 {
   width: 100%;
+  position: relative !important;
   /* margin-left: 60px; */
+}
+.card-img-top1{
+ height:20rem !important;
+}
+.card-body1{
+  position: absolute !important;
+  width: 100% !important;
+  bottom: 0 !important;
+  background-color: rgb(41, 41, 41) !important;
+  opacity: 0.7 !important;
+}
+.card-title1{
+  color: white !important;
+  opacity: 1 !important;
 }
