--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -13,3 +13,14 @@ input::placeholder {
 .input-group {
   margin: auto;
 }
+.input-group12{
+width: 80%;
+display: block;
+margin: 1rem auto;
+}
+@media screen and (max-width:768px) {
+  .heading-1{
+  font-size: 32px;
+  padding: 0px;
+  }
+}
