--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -22,13 +22,26 @@ input::placeholder {
   margin: auto;
 }
 .input-group12 {
-  width: 80%;
+  width: 592px;
+  height: 56px;
+
+  background: linear-gradient(
+    158.22deg,
+    rgba(188, 188, 188, 0.21) 29.5%,
+    rgba(71, 71, 72, 0.12) 135.77%
+  );
+  border-radius: 15px;
   display: block;
-  margin: 1rem auto;
+  margin: 0 auto;
 }
 @media screen and (max-width: 768px) {
   .heading-1 {
     font-size: 32px;
     padding: 0px;
+  }
+  .input-group12 {
+    width: 80%;
+    display: block;
+    margin: 1rem auto;
   }
 }
