--- a/src/Components/Slider1.css
+++ b/src/Components/Slider1.css
@@ -8,10 +8,10 @@ body {
 }
 
 body {
-  background: #eee;
+  /* background: #eee; */
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
-  color: #000;
+  /* color: #000; */
   margin: 0;
   padding: 0;
 }
@@ -23,7 +23,7 @@ body {
 
 .swiper-slide {
   font-size: 18px;
-  background: #fff;
+  /* background: #fff; */
 
   /* Center slide text vertically */
   display: -webkit-box;
@@ -91,7 +91,7 @@ body {
 
 .swiper-slide {
   font-size: 18px;
-  background: #fff;
+  /* background: #fff; */
 overflow: hidden !important;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -124,7 +124,7 @@ overflow: hidden !important;
   padding: 1rem;
 }
 .item12 {
-  color: #ababab;
+  /* color: #ababab; */
   /* background-color: black; */
   border: 0.1rem solid #ababab;
   font-size: 12px;
@@ -132,7 +132,7 @@ overflow: hidden !important;
 
 .swiper-button-next:after {
   /* background-color: rgb(203, 197, 197); */
-  color: #000;
+  /* color: #000; */
   padding: 20px;
   font-size: 20px !important;
   border-radius: 100%;
@@ -140,7 +140,7 @@ overflow: hidden !important;
 }
 .swiper-button-prev:after {
   /* background-color: rgb(203, 197, 197); */
-  color: #000;
+  /* color: #000; */
   padding: 20px;
   font-size: 20px !important;
   border-radius: 100%;
@@ -152,7 +152,7 @@ span.swiper-pagination-bullet {
   border-radius: 5px !important;
 }
 .swiper-pagination-bullet {
-  background: rgb(197, 194, 194);
+  /* background: rgb(197, 194, 194); */
 }
 .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
   display: flex !important;
