--- a/src/Components/Toyslider.css
+++ b/src/Components/Toyslider.css
@@ -36,7 +36,7 @@
     padding:1rem;
   }
   .item12{
-    color: #ababab;
+    /* color: #ababab; */
     /* background-color: black; */
     border: 0.1rem solid #ababab;
     font-size: 12px;
