--- a/src/Components/Hot.css
+++ b/src/Components/Hot.css
@@ -8,10 +8,10 @@ body {
 }
 
 body {
-  background: #eee;
+  /* background: #eee; */
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 14px;
-  color: #000;
+  /* color: #000; */
   margin: 0;
   padding: 0;
 }
@@ -56,7 +56,7 @@ body {
   border: 4px solid rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: rgb(0 0 0 / 8%) 0px 5px 10px;
-  background-color: rgb(255, 255, 255);
+  /* background-color: rgb(255, 255, 255); */
   object-fit: cover;
 }
 .text32 {
