--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -29,7 +29,7 @@ input::placeholder {
     158.22deg,
     rgba(188, 188, 188, 0.21) 29.5%,
     rgba(71, 71, 72, 0.12) 135.77%
-  );
+  ) !important;
   border-radius: 15px;
   display: block;
   margin: 0 auto;
