--- a/src/Components/Trending.css
+++ b/src/Components/Trending.css
@@ -5,13 +5,13 @@
 }
 .uncontrolled {
   font-size: 32px;
-  color: #5f6870 !important;
+  /* color: #5f6870 !important; */
   font-family: "Poppins";
   font-weight: 600;
 }
 .uncontrolled:hover {
   font-size: 32px;
-  color: #0f0f10 !important;
+  /* color: #0f0f10 !important; */
   font-family: "Poppins";
   font-weight: 600;
 }
@@ -26,7 +26,7 @@
   font-family: "Poppins" sans-serif !important;
   font-weight: 900;
   line-height: 28px;
-  color: #fff;
+  /* color: #fff; */
   text-align: right !important;
 }
 .card-name {
@@ -34,23 +34,23 @@
   font-size: 20px;
   font-weight: 700;
   line-height: 24px;
-  color: #fff;
+  /* color: #fff; */
 }
 .text-align {
   align-items: center;
 }
 .nav-link {
-  color: #000 !important;
+  /* color: #000 !important; */
   /* font-size: 40px !important; */
   font-weight: 48px !important;
   font-family: "Poppins" sans-serif !important;
 }
 .nav-link:active {
-  color: #707a83 !important;
+  /* color: #707a83 !important; */
 }
 .nav-tabs .nav-link {
   border-bottom: 2px solid rgb(255, 251, 251) !important;
-  color: #fff !important;
+  /* color: #fff !important; */
   padding-top: 12px !important;
 }
 .colllect {
@@ -69,7 +69,7 @@
   font-size: 12px;
   line-height: 18px;
   font-weight: 600;
-  color: #fff;
+  /* color: #fff; */
 }
 .floor {
   width: 20%;
@@ -87,7 +87,7 @@
   font-size: 12px;
   line-height: 18px;
   font-weight: 600;
-  color: #fff;
+  /* color: #fff; */
 }
 .volume {
   width: 20%;
@@ -105,7 +105,7 @@
   font-size: 12px;
   line-height: 18px;
   font-weight: 600;
-  color: #fff;
+  /* color: #fff; */
 }
 .top-col {
   display: flex;
@@ -114,8 +114,8 @@
   width: 20% !important;
   padding: 15px;
   border-radius: 10px;
-  background-color: rgb(255, 255, 255);
-  color: #000;
+  /* background-color: rgb(255, 255, 255); */
+  /* color: #000; */
   border: 2px solid rgb(229, 232, 235);
   font-size: 20px;
   font-weight: 700;
@@ -127,15 +127,15 @@
   width: 20%;
   padding: 10px;
   border: 2px solid rgb(229, 232, 235);
-  background: #fff;
+  /* background: #fff; */
   border-radius: 10px;
   font-size: 20px;
-  color: #000;
+  /* color: #000; */
   font-weight: 700;
 }
 .dropdown-item {
   font-size: 20px !important;
-  color: #000 !important;
+  /* color: #000 !important; */
   font-weight: 700 !important;
   border-bottom: 1px solid rgb(196, 189, 189) !important;
 }
