--- a/src/Components/Notable.css
+++ b/src/Components/Notable.css
@@ -19,7 +19,10 @@ body {
   width: 100%;
   height: 100%;
 }
-
+/* .card {
+  background-color: transparent !important;
+  border-color: transparent !important;
+} */
 .swiper-slide {
   font-size: 18px;
   background: transparent !important;
@@ -74,5 +77,5 @@ body {
   color: rgb(0, 145, 255);
 } */
 .header-new {
-margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
