--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -11,6 +11,15 @@
   padding-right: 20px;
   /* color: #fff; */
 }
+.nav-icons-2 {
+  font-size: 32px;
+  font-weight: 700;
+  /* padding-right: 20px; */
+  /* color: #fff; */
+}
+.form-switch {
+  padding-left: 0.5em !important;
+}
 .navbar-nav {
   font-family: "Poppins";
   font-weight: 600;
