--- a/src/Components/Trending.css
+++ b/src/Components/Trending.css
@@ -110,6 +110,11 @@
 .top-col {
   display: flex;
 }
+.vector-img{
+  /* background: #fff; */
+  border-radius: 100px;
+  margin-left: 10px;
+}
 .btn1 {
   width: 20% !important;
   padding: 15px;
@@ -120,6 +125,7 @@
   font-size: 20px;
   font-weight: 700;
 }
+
 .btn1:hover {
   box-shadow: rgb(151, 148, 148);
 }
