--- a/src/Components/Hot.css
+++ b/src/Components/Hot.css
@@ -15,7 +15,9 @@ body {
   margin: 0;
   padding: 0;
 }
-
+/* .card {
+  background: none !important;
+} */
 .swiper {
   width: 100%;
   height: 100%;
