--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,9 +1,10 @@
 .icon {
   display: flex;
   list-style-type: none;
+  justify-content: start;
 }
 .icon li {
-  margin: 1rem;
+  margin: 10px;
   font-size: 1.5rem;
 }
 /* .icon li :hover{
@@ -136,3 +137,15 @@ ul.footer2-list li {
 #foter21 {
   margin-bottom: 5rem;
 }
+@media screen and (max-width:1024px) {
+  .profile-fo{
+    margin-left: 40px;
+  }
+  
+}
+/* @media screen and (max-width:414px) {
+  .profile-fo{
+    margin-left: none !important;
+  }
+  
+} */
