--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -32,7 +32,20 @@ input::placeholder {
   margin: auto;
 }
 .input-group12 {
-  width: 592px;
+  width: 180px;
+  height: 56px;
+
+  background: linear-gradient(
+    158.22deg,
+    rgba(188, 188, 188, 0.21) 29.5%,
+    rgba(71, 71, 72, 0.12) 135.77%
+  ) !important;
+  border-radius: 15px;
+  display: block;
+  margin: 0 auto;
+}
+.input-group122 {
+  width: 500px;
   height: 56px;
 
   background: linear-gradient(
@@ -82,5 +95,10 @@ input::placeholder {
     width: 80%;
     display: block;
     margin: 1rem auto;
+  }
+}
+@media screen and (max-width: 412px) {
+  .main-button{
+    display: flex;
   }
 }
