--- a/src/Components/Slider1.css
+++ b/src/Components/Slider1.css
@@ -170,3 +170,22 @@ span.swiper-pagination-bullet {
     margin-left: 13% !important;
   }
 }
+
+@media screen and (max-width: 540px){
+  .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
+    display: flex !important;
+    margin-left: 20% !important;
+  }
+}
+@media screen and (max-width: 360px){
+  .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
+    display: flex !important;
+    margin-left: 12% !important;
+  }
+}
+@media screen and (max-width: 393px){
+  .swiper-pagination.swiper-pagination-bullets.swiper-pagination-horizontal {
+    display: flex !important;
+    margin-left: 15% !important;
+  }
+}
