--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,6 +1,30 @@
 .navbar-width {
   width: 100%;
 }
+.background-main {
+  background-image: url(./Images/imgae-background.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.form-control11 {
+  width: 592px;
+  height: 56px;
+  background-color: transparent;
+  border-radius: 10px;
+  margin-left: 2rem;
+  color: black;
+  border: 1px solid #fff;
+}
+.form-control11::placeholder{
+  color: #000!important ;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Poppins";
+}
+.form-control11::before{
+  background-image: url(./Images/serach-icons.png) !important;
+  color: #000;
+}
 .nav-icons {
   list-style-type: none !important;
   display: flex !important;
