--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -15,13 +15,13 @@
   color: black;
   border: 1px solid #fff;
 }
-.form-control11::placeholder{
-  color: #000!important ;
+.form-control11::placeholder {
+  color: #000 !important ;
   font-size: 16px;
   font-weight: 500;
   font-family: "Poppins";
 }
-.form-control11::before{
+.form-control11::before {
   background-image: url(./Images/serach-icons.png) !important;
   color: #000;
 }
@@ -93,4 +93,18 @@ button.navbar-toggler {
   .navicon23 {
     display: none !important;
   }
+}
+
+/* DROPDOWN */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
 }
