updated-nav-section

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -25,9 +25,9 @@
   /* border-top-left-radius: 15px !important;
   border-bottom-left-radius: 15px !important; */
 }
-/* .signup:hover {
+.signup:hover {
   background-color: #4c91d6 !important;
-} */
+}
 .form-control22 {
   padding: 8px !important;
   border-radius: 10px !important;
