--- a/src/Components/Nft.css
+++ b/src/Components/Nft.css
@@ -66,3 +66,7 @@ button#contact-tab {
   color: grey;
   font-weight: 900;
 }
+.cards-section {
+  padding-left: 30px !important;
+  padding-right: 20px !important;
+}
