--- a/src/Components/Nft.css
+++ b/src/Components/Nft.css
@@ -67,6 +67,6 @@ button#contact-tab {
   font-weight: 900;
 }
 .cards-section {
-  padding-left: 30px !important;
-  padding-right: 20px !important;
+  margin-left: 30px !important;
+  margin-right: 20px !important;
 }
