--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -5,7 +5,9 @@
   background-image: url(./Images/imgae-background.png);
   background-repeat: no-repeat;
   background-size: contain;
-  width: 100%;
+  width: 100% ;
+  /* height: 485px; */
+  height: 50%;
 }
 .form-control11 {
   width: 592px;
@@ -55,6 +57,10 @@
 .collapse {
   padding-top: 24px;
 }
+.navbar{
+  position: absolute;
+  background: rgb(100, 150, 162, 0.9);
+}
 
 /* .input-1 {
   width: 50%;
@@ -89,13 +95,13 @@ button.navbar-toggler {
 .explore {
   background-color: rgb(209, 209, 209);
   border: none !important;
-  padding: 20px 40px;
+  padding: 20px 50px;
   text-decoration: none;
 }
 .sell{
   background-color: rgb(209, 209, 209);
   border: none !important;
-  padding: 20px 40px;
+  padding: 20px 60px;
   text-decoration: none;
 }
 .sell {
@@ -117,6 +123,10 @@ button.navbar-toggler {
   .main-button {
     display: flex;
   }
+}
+@media screen and (max-width:1280px) {
+  
+  
 }
 
 /* DROPDOWN */
