--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'Futura Maxi CG Bold';
+  src: url("../src/futura-maxi-cg-bold-maisfontes.ca68/futura-maxi-cg-bold.otf");
+}
+
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 section {
   background-image: linear-gradient(to right, #47474a, #73525c);
