--- a/src/Components/Collectionsearchpanal.css
+++ b/src/Components/Collectionsearchpanal.css
@@ -4,17 +4,30 @@ border-radius: 15px;
 padding: 0.9rem 1rem;
 float: right;
 margin-right: 80px;
+
 }
 .time1{
     margin: 0.4rem;
     padding: 0.4rem;
+    font-size: 14px;
+    font-family: 'Futura Maxi CG Bold';
+    
 }
 .time1.hour{
     background: #fff;
     border-radius: 9px;
     padding: 0.7rem;
     cursor: pointer;
+    font-size: 14px;
+    font-family: 'Futura Maxi CG Bold';
+    
 }
 .collection{
     margin: 25px !important;
+}
+.categories-tab{
+    font-size: 10px;
+    font-family: "Poppins";
+    font-weight: 500;
+    color: #6A6A6A;
 }
