--- a/src/Components/CollectionTable.css
+++ b/src/Components/CollectionTable.css
@@ -14,3 +14,10 @@
     box-shadow: none !important;
     margin-left: 25px;
 }
+th.MuiTableCell-root.MuiTableCell-head.MuiTableCell-sizeMedium.css-1ygcj2i-MuiTableCell-root {
+    
+    font-family: 'Futura Maxi CG Bold';
+}
+th.MuiTableCell-root.MuiTableCell-head.MuiTableCell-alignRight.MuiTableCell-sizeMedium.css-1azl6jz-MuiTableCell-root {
+    font-family: 'Futura Maxi CG Bold';
+}
