--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -14,14 +14,14 @@
 } */
 .signup {
   font-size: 1.2rem;
-  /* padding: 10px; */
-  height: 33px;
-    width: 127px;
+  /* padding: 10px 20px; */
+  height: 38px;
+  width: 130px;
   font-weight: 700;
   color: #000 !important;
-  background:  #FEC200 !important;
+  background: #fec200 !important;
   border: none;
-  border-radius: 15px;
+  border-radius: 10px;
   /* border-top-left-radius: 15px !important;
   border-bottom-left-radius: 15px !important; */
 }
@@ -104,7 +104,7 @@ ul.footer2-list li {
   .list-heading {
     text-align: center;
   }
-  .icon{
+  .icon {
     justify-content: space-around;
   }
 }
@@ -141,17 +141,15 @@ ul.footer2-list li {
 #foter21 {
   margin-bottom: 5rem;
 }
-@media screen and (max-width:1024px) {
-  .profile-fo{
+@media screen and (max-width: 1024px) {
+  .profile-fo {
     margin-left: 40px;
   }
-  
 }
-@media screen and (max-width:425px) {
-  .profile-fo{
+@media screen and (max-width: 425px) {
+  .profile-fo {
     margin-left: 1px;
   }
-  
 }
 /* @media screen and (max-width:414px) {
   .profile-fo{
