--- a/src/Components/Searchpanal.css
+++ b/src/Components/Searchpanal.css
@@ -3,7 +3,7 @@ width: 119.77px ;
 height: 48px ;
 /* left: 50px ;
 top: 306.09px; */
-background: rgba(246, 246, 246, 0.5) ;
+background: rgb(205 200 200 / 50%) ;
 border-radius: 15px ;
 border: none;
 font-size: 16px;
@@ -15,7 +15,7 @@ font-size: 16px;
 height: 48px;
 left: 177.03px;
 top: 306.09px;
-background: rgba(246, 246, 246, 0.5);
+background: rgb(205 200 200 / 50%);
 border-radius: 15px;
 border: none;
 }
@@ -24,7 +24,7 @@ width: 100%;
 height: 48px;
 left: 231.81px;
 top: 306.09px;
-background: rgba(246, 246, 246, 0.5);
+background: rgb(205 200 200 / 50%);
 border-radius: 15px;
 border: none;
 padding-left: 15px;
@@ -36,11 +36,11 @@ padding-left: 15px;
 
 }
 .dropdown-toggle{
-width: 197.38px !important;
+width: 155px !important;
 height: 48px;
 left: 1091.72px;
 top: 306.09px;
-background: rgba(246, 246, 246, 0.5) !important;
+background: rgb(205 200 200 / 50%) !important;
 border-radius: 15px !important;
 border: none !important;
 color: #434446 !important;
