--- a/src/Components/Helpcenter.css
+++ b/src/Components/Helpcenter.css
@@ -1,34 +1,43 @@
+.background-image {
+  width: 1440px;
+height:500px;
+left: 1440px;
+top: 0px;
+background-repeat: no-repeat;
+background-image: url("./Images/helpcenter-img.png");
+background-size: cover;
+}
+
 .tabs-time {
-    background: #f6f6f6;
-    border-radius: 15px;
-    padding: 0.9rem 1rem;
-    float: right;
-    margin-right: 80px;
-  }
-  .time1 {
-    margin: 0.4rem;
-    padding: 0.4rem;
-    font-size: 14px;
-    font-family: "Futura Maxi CG Bold";
-  }
-  .time1.hour {
-    background: #fff;
-    border-radius: 9px;
-    padding: 0.7rem;
-    cursor: pointer;
-    font-size: 14px;
-    font-family: "Futura Maxi CG Bold";
-  }
-  .tabs-time {
-    background: rgb(205 200 200 / 50%);
-  }
-  .collection {
-    margin: 25px !important;
-  }
-  .categories-tab {
-    font-size: 10px;
-    font-family: "Poppins";
-    font-weight: 500;
-    color: #6a6a6a;
-  }
-  
+  background: #f6f6f6;
+  border-radius: 15px;
+  padding: 0.9rem 1rem;
+  float: right;
+  margin-right: 80px;
+}
+.time1 {
+  margin: 0.4rem;
+  padding: 0.4rem;
+  font-size: 14px;
+  font-family: "Futura Maxi CG Bold";
+}
+.time1.hour {
+  background: #fff;
+  border-radius: 9px;
+  padding: 0.7rem;
+  cursor: pointer;
+  font-size: 14px;
+  font-family: "Futura Maxi CG Bold";
+}
+.tabs-time {
+  background: rgb(205 200 200 / 50%);
+}
+.collection {
+  margin: 25px !important;
+}
+.categories-tab {
+  font-size: 10px;
+  font-family: "Poppins";
+  font-weight: 500;
+  color: #6a6a6a;
+}
