--- a/src/Components/Helpcenter.css
+++ b/src/Components/Helpcenter.css
@@ -41,3 +41,64 @@ background-size: cover;
   font-weight: 500;
   color: #6a6a6a;
 }
+
+.help-header{
+  /* padding-top: 50px; */
+  color: #fff;
+  margin-top: 280px;
+  font-size: 40px;
+  font-family: "Futura Maxi CG Bold";
+  margin-left: 75px;
+}
+.section-second{
+  text-align: center;
+  margin-top: 100px;
+}
+.section-para{
+  font-size: 18px;
+  color: #6A6A6A;
+  font-family: "Futura Maxi CG Book";
+}
+.help-para{
+  color: #fff;
+  font-family: "Futura Maxi CG Book";
+  font-size: 18px;
+  font-weight: 400;
+  margin-left: 75px;
+}
+.second-section{
+  font-size: 45px;
+  font-family: "Futura Maxi CG Bold";
+}
+.card-11{
+  /* border: 2px solid #000; */
+  margin-top: 50px;
+  height: 220px;
+  width: 320px;
+  background: rgba(241, 241, 241, 0.4);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 12px;
+}
+.meet-section{
+  font-size: 45px;
+  font-family: "Futura Maxi CG Bold";
+  text-align: center;
+  margin-top: 50px;
+}
+.comma-image{
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.h2-place{
+  font-size: 45px;
+  font-family: 'Futura Maxi CG Bold';
+}
+.para-place{
+  font-size: 14px;
+  font-family: 'Futura Maxi CG Bold';
+  color: #6A6A6A;
+}
+.sp{
+  font-size: 18px;
+  font-family: 'Futura Maxi CG Bold';
+}
