--- a/src/Components/Helpcenter.css
+++ b/src/Components/Helpcenter.css
@@ -88,6 +88,7 @@ border-radius: 12px;
 .comma-image{
   margin-top: 50px;
   margin-bottom: 50px;
+  max-width: 100%;
 }
 .h2-place{
   font-size: 45px;
@@ -102,7 +103,70 @@ border-radius: 12px;
   font-size: 18px;
   font-family: 'Futura Maxi CG Bold';
 }
-.row.image-ceo{
-  margin-top: 200px;
-  margin-bottom: 80px;
+/* .row.image-ceo{
+  margin: 100px;
+} */
+.ceo-img{
+  max-width: 550px;
+  min-width: 200px;
+}
+
+/* CARDS */
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide {
+  font-size: 18px;
+  background: transparent !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.card-image1 {
+  width: 78px !important;
+  height: 78px;
+  border: 4px solid rgb(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: rgb(0 0 0 / 8%) 0px 5px 10px;
+  /* background-color: rgb(99, 95, 95); */
+  object-fit: cover;
+}
+.text111{
+  display: flex;
+  font-size: 14px;
+    font-family: 'Futura Maxi CG Bold';
+    font-weight: 400;
+}
+.tick-icons11{
+  font-family:'Futura Maxi CG Book';
+  font-size: 18px;
+  font-weight: 400;
+  margin-top: -10px;
+}
+.card-image121{
+  width: 78px !important;
+  height: 78px;
+  border: 4px solid rgb(255, 255, 255);
+  border-radius: 50px;
+  box-shadow: rgb(0 0 0 / 8%) 0px 5px 10px;
+  /* background-color: rgb(99, 95, 95); */
+  object-fit: cover;
+  margin-top: -25px;
+  margin-bottom: 13px;
 }
