--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -10,7 +10,7 @@
   height: 50%;
 }
 .form-control11 {
-  width: 592px;
+  min-width: 592px;
   height: 56px;
   background-color: transparent;
   border-radius: 10px;
