--- a/src/Components/Mycollections.css
+++ b/src/Components/Mycollections.css
@@ -53,9 +53,20 @@ h2 {
   height: 45px;
   border-radius: 10px;
   border: 2px solid #d9d9d9;
+  color: #000;
+  font-family: 'Poppins' ;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 126%;
 }
 .name-input::placeholder {
-  color: #c5c5c5 !important;
+  font-family: 'Poppins' !important;
+font-style: normal !important;
+font-weight: 600 !important;
+font-size: 16px !important;
+line-height: 126% !important;
+color: #C5C5C5 !important;
 }
 .url-input {
   width: 404px;
@@ -78,7 +89,74 @@ h2 {
   left: 200.03px;
   top: 1978.08px;
   border: 1px solid #d9d9d9;
-  border-radius: 9.92153px;
+  border-radius: 10px;
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 700 !important;
+font-size: 16px !important;
+line-height: 126%;
+color: #000000;
+margin-bottom: 20px;
+}
+.MuiInputBase-root.MuiOutlinedInput-root.MuiInputBase-colorPrimary.MuiInputBase-formControl.css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root {
+  width: 404px !important;
+  height: 54px;
+border: 1px solid #D9D9D9;
+border-radius: 10px;
+font-family: 'Poppins'!important;
+font-style: normal;
+font-weight: 500;
+font-size: 16px!important;
+line-height: 126%;
+color: #000000;
+}
+#eth{
+  font-style: normal;
+  font-family: 'Poppins'!important;
+font-weight: 800;
+font-size: 16px!important;
+line-height: 126%;
+color: #000000;
+}
+.eth-icon{
+  border: 2px solid #E4E4E4;
+    border-radius: 50px;
+    background:  #E4E4E4;
+    margin-right: 15px;
+}
+.modal-footer{
+  text-align: center !important;
+  display: initial !important;
+}
+button.btn.btn-secondary {
+  width: 154.7px;
+  height: 56px;
+  left: 578.02px;
+  top: 2880.87px;
+  background: rgba(228, 228, 228, 0.5);
+  color: #000;
+  border: none;
+  border-radius: 15px;
+    border: none !important;
+    font-size: 16px;
+    color: #000;
+    font-family: 'Century Gothic';
+    font-weight: 800;
+}
+button.btn.btn-primary {
+  width: 118.94px;
+  height: 56px;
+  left: 743.02px;
+  top: 2880.87px;
+  background: #FEC200;
+  border-radius: 15px;
+  border: none;
+  border-radius: 15px;
+    border: none !important;
+    font-size: 16px;
+    color: #000;
+    font-family: 'Century Gothic';
+    font-weight: 800;
 }
 .links-input {
   width: 404px;
@@ -112,10 +190,124 @@ h2 {
 .address-button{
     width: 178.87px;
   height: 53.4px;
-  left: 200.03px;
-  top: 1978.08px;
   border: 1px solid #d9d9d9;
-  border-radius: 9.92153px;
+  border-radius: 10px;
+  font-family: 'Poppins';
+font-style: normal;
+font-weight: 700 !important;
+font-size: 16px !important;
+line-height: 126%;
+color: #000000;
+margin-bottom: 20px
+
+}
+.eth-input{
+  width: 404px;
+    height: 50px;
+    border-radius: 10px;
+    border: 2px solid #d9d9d9;
+}
+.eth-input::placeholder{
+  color: #000 !important;
+  padding-left: 10px !important;
+}
+.button-eth{
+  width: 146.64px;
+height: 71.14px;
+border: 1px solid #D9D9D9;
+border-radius: 10px;
+}
+button.collection-button.btn.btn-primary {
+    width: 204.31px;
+    height: 56px;
+    background: #FEC200 !important;
+    border-radius: 15px;
+    border: none !important;
+    font-size: 16px;
+    color: #000;
+    font-family: 'Century Gothic';
+    font-weight: 800;
+}
+.addtoken-input{
+  width: 404px;
+  height: 50px;
+  border-radius: 10px;
+  border: 2px solid #d9d9d9;
+margin-top: 10px;
+font-style: normal;
+    font-family: 'Poppins'!important;
+    font-weight: 700;
+    font-size: 16px!important;
+    line-height: 126%;
+    color: #000000;
+}
+.addtoken-input::placeholder{
+  color: #000 !important;
+  padding-left: 10px;
+}
+input#flexSwitchCheckChecked {
+  width: 50px;
+  height: 25px;
+}
+.modal-title.h4 {
+  width: 312px;
+  height: 35px;
+  font-family: 'Futura Maxi CG Bold';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 35px;
+  color: #000000;
+}
+.required{
+  font-family: 'Futura Maxi CG Book';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 20px;
+}
+.logo{
+  font-family: 'Futura Maxi CG Bold';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 19px;
+margin-bottom: 15px;
+color: #000000;
+}
+.logo-para{
+font-family: 'Futura Maxi CG Book';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 15px;
+color: #6A6A6A;
+
+}
+.paras{
+  font-family: 'Futura Maxi CG Book';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 22px;
+color: #6A6A6A;
+}
+#inputareaprofile{
+  padding: 0px 0px 25px 0px;
+}
+.modal-header {
+  border-bottom: none !important;
+  margin-left: 90px;
+  margin-top: 45px;
+  margin-bottom: 45px;
+  margin-right: 25px;
+}
+button.btn-close {
+  border: 0.5px solid black !important;
+  border-radius: 50%;
+}
+.images-box{
+  padding: 40px 0px;
 }
 @media (min-width: 576px) {
   .modal-dialog {
