--- a/src/Components/Newsletter.css
+++ b/src/Components/Newsletter.css
@@ -1,67 +1,64 @@
-.background-image {
-    width: 1440px;
-  height:874px;
-  left: 1440px;
-  top: 0px;
+.background-image1 {
+  width: 1440px;
+  height: 875px;
   background-repeat: no-repeat;
   background-image: url("./Images/newletter-img.png");
   background-size: cover;
-  }
- .form-control002{
-    color: #000;
-   width: 480px ;
-    height: 53px ;
-    border: 1px solid #D9D9D9 ;
-    border-radius: 10px;
- }
- .form-control002::placeholder{
-    color: #6A6A6A!important;
-    padding-left: 10px;
-    font-family: "Poppins";
-    font-size: 16px;
- }
-.input-group1225{
-    width: 100%;
 }
-.btn.btn-warning{
-    width: 155px;
-    height: 56px;
-    font-size: 16px;
-    font-family: 'Century Gothic';
-    font-weight: 700;
-    border-radius: 15px;
+.form-control002 {
+  color: #000;
+  width: 480px;
+  height: 53px;
+  border: 1px solid #d9d9d9;
+  border-radius: 10px;
 }
-.iimg{
-    background: #fff;
-    margin-top: 200px;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+.form-control002::placeholder {
+  color: #6a6a6a !important;
+  padding-left: 10px;
+  font-family: "Poppins";
+  font-size: 16px;
 }
-.iimg2{
-    background: #fff;
-    margin-top: 200px ;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-
+.input-group1225 {
+  width: 100%;
+}
+.btn.btn-warning {
+  width: 155px;
+  height: 56px;
+  font-size: 16px;
+  font-family: "Century Gothic";
+  font-weight: 700;
+  border-radius: 15px;
+}
+.iimg {
+  background: #fff;
+  margin-top: 200px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+}
+.iimg2 {
+  background: #fff;
+  margin-top: 200px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 .col-lg-6.col-md-6.col-sm-6.col-6.iimg {
-    margin-top: 200px;
-    height: 565px;
+  margin-top: 200px;
+  height: 565px;
 }
 .col-lg-6.col-md-6.col-sm-6.col-6.iimg2 {
-    margin-top: 200px;
+  margin-top: 200px;
 }
-.news-head{
-    padding-top: 100px;
-    font-size: 30px;
-    font-family: 'Futura Maxi CG Bold';
-    line-height: 35px;
+.news-head {
+  padding-top: 100px;
+  font-size: 30px;
+  font-family: "Futura Maxi CG Bold";
+  line-height: 35px;
 }
-.para-news{
-    font-size: 18px;
-    font-family: 'Futura Maxi CG Book';
-    color: #6A6A6A;
+.para-news {
+  font-size: 18px;
+  font-family: "Futura Maxi CG Book";
+  color: #6a6a6a;
 }
-.newsletter-img{
-    padding-top: 50px;
+.newsletter-img {
+  padding-top: 50px;
 }
