--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,6 @@ section {
 :root{
 --abc:linear-gradient(to right, #47474a, #73525c);
 }
+/* .react-tabs__tab ,.react-tabs__tab--selected{
+  border-bottom: 5px solid red !important;
+} */
